[gd_scene load_steps=3 format=3 uid="uid://iwl5de5vqiw"]

[ext_resource type="Theme" uid="uid://mpg7aqwxxnq2" path="res://assets/themes/monster_field_theme.tres" id="1_comk6"]
[ext_resource type="Script" path="res://menus/MainMenu.gd" id="1_ugqiy"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("newGameButton", "dataEditorButton", "quitButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ugqiy")
newGameButton = NodePath("MarginContainer/VBoxContainer/NewGameButton")
dataEditorButton = NodePath("MarginContainer/VBoxContainer/DataEditorButton")
quitButton = NodePath("MarginContainer/VBoxContainer/QuitButton")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(2, 2)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 358.0
offset_bottom = 798.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("1_comk6")
theme_override_font_sizes/font_size = 48
disabled = true
text = "Nueva partida"

[node name="DataEditorButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_comk6")
theme_override_font_sizes/font_size = 48
text = "Editor"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_comk6")
theme_override_font_sizes/font_size = 48
text = "Salir"

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DataEditorButton" to="." method="_on_data_editor_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
